add projects section

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,19 +24,19 @@
 </head>
 
 <body>
-  <!-- preloader -->
-  <div class="preloader d-flex align-items-center justify-content-center">
-    <img src="{% static 'img/preloader.gif' %}" alt="preloader">
-  </div>
-  <!-- end preloader -->
-  <!-- welcome message -->
-  <div class="intro">
-    <h1 class="logo-header">
-      <div class="logo">به وبسایت ما</div>
-      <div class="logo">خوش اومدین</div>
-    </h1>
-  </div>
-  <!-- end welcome message -->
+<!--  &lt;!&ndash; preloader &ndash;&gt;-->
+<!--  <div class="preloader d-flex align-items-center justify-content-center">-->
+<!--    <img src="{% static 'img/preloader.gif' %}" alt="preloader">-->
+<!--  </div>-->
+<!--  &lt;!&ndash; end preloader &ndash;&gt;-->
+<!--  &lt;!&ndash; welcome message &ndash;&gt;-->
+<!--  <div class="intro">-->
+<!--    <h1 class="logo-header">-->
+<!--      <div class="logo">به وبسایت ما</div>-->
+<!--      <div class="logo">خوش اومدین</div>-->
+<!--    </h1>-->
+<!--  </div>-->
+<!--  &lt;!&ndash; end welcome message &ndash;&gt;-->
   <!-- start nav -->
   <section class="nav-head section">
     <nav class="navbar navbar-expand-md container">
@@ -228,88 +228,90 @@
     <div class="animation-project d-none d-md-inline-block"></div>
     <div class="row gallery">
       <!-- single project -->
+      {% for project in projects %}
       <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">
         <div class="img-pro">
           <div class="addition">
-            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">
-              <i class="fas fa-search pro-link"></i>
-          </div>
-          <div class="py-2 pro-name-activity w-100 text-center">
-            <a href="#" class="pro-name font-weight-bold text-center">هوشانه</a>
-            <p class="pro-activity">فروشگاه</p>
-          </div>
-        </div>
-      </div>
-      <!-- end single project -->
-      <!-- single project -->
-      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">
-        <div class="img-pro">
-          <div class="addition">
-            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">
+            <img src="{{ project.image.url }}" alt="" class="img-fluid pro-photo ">
             <i class="fas fa-search pro-link"></i>
           </div>
           <div class="py-2 pro-name-activity w-100 text-center">
-            <a href="#" class="pro-name font-weight-bold text-center">باشگاه یار</a>
-            <p class="pro-activity">اپلیکیشن مدیریت باشگاه</p>
+            <a href="{{ projects.address }}" class="pro-name font-weight-bold text-center">{{ project.title }}</a>
+            <p class="pro-activity">{{ project.description }}</p>
           </div>
         </div>
       </div>
+        {% endfor %}
       <!-- end single project -->
       <!-- single project -->
-      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">
-        <div class="img-pro">
-          <div class="addition">
-            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">
-            <i class="fas fa-search pro-link"></i>
-          </div>
-          <div class="py-2 pro-name-activity w-100 text-center">
-            <a href="#" class="pro-name font-weight-bold text-center">فرخ رخ</a>
-            <p class="pro-activity">فروشگاه</p>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">-->
+<!--        <div class="img-pro">-->
+<!--          <div class="addition">-->
+<!--            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">-->
+<!--            <i class="fas fa-search pro-link"></i>-->
+<!--          </div>-->
+<!--          <div class="py-2 pro-name-activity w-100 text-center">-->
+<!--            <a href="#" class="pro-name font-weight-bold text-center">باشگاه یار</a>-->
+<!--            <p class="pro-activity">اپلیکیشن مدیریت باشگاه</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
       <!-- end single project -->
       <!-- single project -->
-      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">
-        <div class="img-pro">
-          <div class="addition">
-            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">
-            <i class="fas fa-search pro-link"></i>
-          </div>
-          <div class="py-2 pro-name-activity w-100 text-center">
-            <a href="#" class="pro-name font-weight-bold text-center">آژا فیت</a>
-            <p class="pro-activity">وبلاگ ورزشی</p>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">-->
+<!--        <div class="img-pro">-->
+<!--          <div class="addition">-->
+<!--            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">-->
+<!--            <i class="fas fa-search pro-link"></i>-->
+<!--          </div>-->
+<!--          <div class="py-2 pro-name-activity w-100 text-center">-->
+<!--            <a href="#" class="pro-name font-weight-bold text-center">فرخ رخ</a>-->
+<!--            <p class="pro-activity">فروشگاه</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
       <!-- end single project -->
       <!-- single project -->
-      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">
-        <div class="img-pro">
-          <div class="addition">
-            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">
-            <i class="fas fa-search pro-link"></i>
-          </div>
-          <div class="py-2 pro-name-activity w-100 text-center">
-            <a href="#" class="pro-name font-weight-bold text-center">لینکدونی</a>
-            <p class="pro-activity">اپلیکیشن</p>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">-->
+<!--        <div class="img-pro">-->
+<!--          <div class="addition">-->
+<!--            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">-->
+<!--            <i class="fas fa-search pro-link"></i>-->
+<!--          </div>-->
+<!--          <div class="py-2 pro-name-activity w-100 text-center">-->
+<!--            <a href="#" class="pro-name font-weight-bold text-center">آژا فیت</a>-->
+<!--            <p class="pro-activity">وبلاگ ورزشی</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
       <!-- end single project -->
       <!-- single project -->
-      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">
-        <div class="img-pro">
-          <div class="addition">
-            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">
-            <i class="fas fa-search pro-link"></i>
-          </div>
-          <div class="py-2 pro-name-activity w-100 text-center">
-            <a href="#" class="pro-name font-weight-bold text-center">فات چمپیون</a>
-            <p class="pro-activity">فروشگاه</p>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">-->
+<!--        <div class="img-pro">-->
+<!--          <div class="addition">-->
+<!--            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">-->
+<!--            <i class="fas fa-search pro-link"></i>-->
+<!--          </div>-->
+<!--          <div class="py-2 pro-name-activity w-100 text-center">-->
+<!--            <a href="#" class="pro-name font-weight-bold text-center">لینکدونی</a>-->
+<!--            <p class="pro-activity">اپلیکیشن</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+      <!-- end single project -->
+      <!-- single project -->
+<!--      <div class="col-12 col-md-6 col-lg-4 py-4 d-flex align-items-center justify-content-center gallery-img">-->
+<!--        <div class="img-pro">-->
+<!--          <div class="addition">-->
+<!--            <img src="{% static 'img/project1.jpg' %}" alt="" class="img-fluid pro-photo ">-->
+<!--            <i class="fas fa-search pro-link"></i>-->
+<!--          </div>-->
+<!--          <div class="py-2 pro-name-activity w-100 text-center">-->
+<!--            <a href="#" class="pro-name font-weight-bold text-center">فات چمپیون</a>-->
+<!--            <p class="pro-activity">فروشگاه</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
       <!-- end single project -->
     </div>
   </section>
